--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
         "ts-jest": "27.0.3",
         "tslib": "2.2.0",
         "typescript": "4.3.2"
+    },
+    "dependencies": {
+        "@angular-devkit/schematics-cli": "^12.0.5"
     }
 }
